
Encoders:
 * high10, high422 and high444 encoding support in h264

Access:
 * Screen: Added support for OS X Lion
 * Major improvements in DASH support
 * Improvements in Blu-Ray module, notably for multiple video tracks support
 * Important improvements and rewrite of the v4l2 access module
 * HTTP: support for Internationalized Domain Names

Demuxers:
 * MP4: partial support for fragmented MP4
 * Vorbis: better support for metadata and cover art
 * AVI: better support for tags and extended metadata
 * Support for FLAC, Atrac and some ADPCM in AVI
 * Support for DV data type 1 in AVI and 12 bits DV Audio
 * Support for total number of tracks in major container
 * Support for Cook and Atrac in MKV
 * AVI: support for files produced by Nikon cameras
 * Support for more MJPEG streams

Audio output:
 * Windows Audio Session API audio output support
 * OpenBSD sndio audio output support
 * Important improvements on the OpenSL ES module

Audio Filters:
 * new remapping channel filter
 * new filter to enhance stereo effect by mono suppression and delay effect
 * new VSXu visualization plugin

Video Outputs:
 * OpenGL: use glsl instead of ARB to do the YUV->RGB conversions
 * Fix the power management issue on Windows for standby management

Video Filters:
 * new anaglyph video filter which transforms side by side 3D video streams in
   anaglyph glasses (aka red/blue) compatible images.
 * Support in deinterlacing filter for most 4:2:0, 4:2:2, 4:4:4 YUV formats
   and for bits depth higher than 8bits (like 10bits)
 * Improvements on the transform filter, to support 10bits and RGB formats
 * Revival of the openCV and openCV example filters

Stream Output:
 * Extended support for recording, notably for MKV and AVI

Interfaces:
 * configurable password for the HTTP server.
 * .hosts removed from the HTTP server.
 * fixed Lua command line interface console mode under Windows.
 * Better support for MCE remotes on Windows
 * Hotkey support for TS program selection
