@@ -972,6 +972,7 @@ modules/stream_filter/dash/dash.cpp
 modules/stream_filter/decomp.c
 modules/stream_filter/httplive.c
 modules/stream_filter/record.c
+modules/stream_filter/smooth/smooth.c
 modules/stream_out/autodel.c
 modules/stream_out/bridge.c
 modules/stream_out/delay.c
